# thylacine

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  loc.sh
kernel/: 9p_attach.c  9p_client.c  9p_session.c  9p_spoor_transport.c  9p_srvconn_transport.c  9p_transport.c  9p_transport_loopback.c  9p_transport_mq.c  9p_wire.c  CMakeLists.txt  allowance.c  burrow.c  canary.c  chacha20.c  cons.c  cpio.c  dev.c  dev9p.c  dev9p_poll.c  devcap.c  devctl.c  devdev.c  devenv.c  devhw.c  devnone.c  devnotes.c  devpci.c  devproc.c  devramfs.c  devsrv.c  dma_handle.c  elf.c  env.c  exec.c  extinction.c  fault_test.c  full.c  handle.c  image.c  init.c  (+33 more)
kernel/include/thylacine/: 9p_attach.h  9p_client.h  9p_session.h  9p_spoor_transport.h  9p_srvconn_transport.h  9p_transport.h  9p_transport_loopback.h  9p_transport_mq.h  9p_wire.h  allowance.h  burrow.h  canary.h  caps.h  chacha20.h  cons.h  context.h  cpio.h  dev.h  dev9p.h  devcap.h  devramfs.h  devsrv.h  dma_handle.h  dtb.h  elf.h  env.h  errno.h  exec.h  extinction.h  handle.h  image.h  init.h  irqfwd.h  joey.h  larder.h  loom.h  mmio_handle.h  notes.h  page.h  path.h  (+26 more)
kernel/test/: test.c  test.h  test_9p_attach.c  test_9p_client.c  test_9p_session.c  test_9p_spoor_transport.c  test_9p_srvconn_transport.c  test_9p_transport.c  test_9p_wire.c  test_allowance.c  test_alternatives.c  test_asid.c  test_attach_probe.c  test_burrow.c  test_burrow_map_proc.c  test_burrow_mmio.c  test_caps.c  test_clock.c  test_cons.c  test_context.c  test_cpio.c  test_demand_page.c  test_dev.c  test_dev9p.c  test_devcap.c  test_devctl.c  test_devdev.c  test_devhw.c  test_devpci.c  test_devproc.c  test_devramfs.c  test_devsrv.c  test_devsrv_conn.c  test_directmap.c  test_dma_handle.c  test_driver_crash_recovery.c  test_dtb.c  test_elf.c  test_env.c  test_exec.c  (+85 more)
tools/corvus-mint/: Cargo.toml
tools/corvus-mint/src/: main.rs
usr/: CMakeLists.txt  Cargo.toml
usr/.cargo/: config.toml
usr/alloc-smoke/: Cargo.toml
usr/alloc-smoke/src/: main.rs
usr/ambush-child/: child.go  go.mod
usr/ambush-probe/: Cargo.toml
usr/ambush-probe/src/: main.rs
usr/apps/: AUX-DIRECTIVE.md  AUX-ROADMAP.md  Cargo.toml  DOC-GAP-REPORT.md  HVF-IDLE-FINDINGS.md  NET-APPS.md  TAPESTRY-DESIGN.md  net-demo.ut
usr/apps/aux-rt/: Cargo.toml
usr/apps/basename/: Cargo.toml  TEST-PLAN.md
usr/apps/bind/: Cargo.toml  TEST-PLAN.md
usr/apps/cat/: Cargo.toml  TEST-PLAN.md
usr/apps/cmp/: Cargo.toml  TEST-PLAN.md
usr/apps/cp/: Cargo.toml  (+1 more)
usr/argv-smoke/: Cargo.toml
usr/attach-probe/: CMakeLists.txt  attach-probe.c
usr/aurora/: Cargo.toml  config.default
usr/burrow-torture/: Cargo.toml
usr/coreutil-smoke/: Cargo.toml
usr/coreutils/: Cargo.toml
usr/corvus/: Cargo.toml
usr/cpubench/: Cargo.toml
usr/crash-probe/: Cargo.toml
usr/curl/: Cargo.toml
usr/dap-probe/: Cargo.toml
usr/debug-child/: Cargo.toml
usr/debug-probe/: Cargo.toml
usr/fs-mut-smoke/: Cargo.toml
usr/fsbench/: Cargo.toml
usr/go-env/: go.mod  main.go
usr/go-exec/: main.go
usr/go-fs/: go.mod  main.go
usr/go-get/: go.mod  main.go
usr/go-goroutines/: go.mod  main.go
usr/go-hello/: go.mod  hello.go
usr/go-net/: go.mod  main.go
usr/go-web/: go.mod  main.go
usr/gpud/: Cargo.toml
usr/hello/: CMakeLists.txt  hello.c
usr/hello-rs/: Cargo.toml
usr/httpd/: Cargo.toml
usr/https/: Cargo.toml
usr/hwbp-verify/: Cargo.toml
usr/irq-bench/: Cargo.toml
usr/irq-probe/: Cargo.toml
usr/jc-probe/: Cargo.toml
usr/joey/: CMakeLists.txt  joey.c
usr/legate-prover/: Cargo.toml
usr/login/: Cargo.toml
usr/loom-bench/: Cargo.toml
usr/loom-smoke/: Cargo.toml
usr/loom-stress/: Cargo.toml
usr/lsp-probe/: Cargo.toml
usr/menagerie-probe/: Cargo.toml
usr/mmio-probe/: Cargo.toml
usr/net-echo/: Cargo.toml
usr/netd/: Cargo.toml
usr/netdev-driver/: Cargo.toml
usr/netdev-pci-driver/: Cargo.toml
usr/netdev-pci-test/: Cargo.toml
usr/netdev-test/: Cargo.toml
usr/netperf/: Cargo.toml
usr/nettest/: Cargo.toml
usr/nora/: Cargo.toml
usr/nora-demo/: go.mod  nora-demo.go
usr/parley-echo/: Cargo.toml
usr/parley-probe/: Cargo.toml
usr/pipe-probe/: CMakeLists.txt  pipe-probe.c
usr/pipe-sink/: Cargo.toml
usr/pipe-src/: Cargo.toml
usr/pouch-hello/: pouch-hello-argv.c  pouch-hello-cxx.cpp  pouch-hello-env.c  pouch-hello-exitgroup.c  pouch-hello-fault.c  pouch-hello-fopen.c  pouch-hello-fs.c  pouch-hello-getrandom.c  pouch-hello-malloc.c  pouch-hello-mallocng-torture.c  pouch-hello-net.c  pouch-hello-poll.c  pouch-hello-printf.c  pouch-hello-pty.c  pouch-hello-signals.c  pouch-hello-sockets.c  pouch-hello-sodium.c  pouch-hello-spawn.c  pouch-hello-stdio.c  pouch-hello-threads.c  pouch-hello.c
usr/prowl/: Cargo.toml
usr/pty-probe/: Cargo.toml
usr/ptyfs/: Cargo.toml
usr/ptyhost/: Cargo.toml
usr/scripts/: aarch64-userspace.ld
usr/sdl-probe/: sdl-probe.c
usr/sntp/: Cargo.toml
usr/stack-child/: Cargo.toml
usr/stack-probe/: Cargo.toml
usr/stratumd-stub/: CMakeLists.txt  stratumd-stub.c
usr/stub-driver/: CMakeLists.txt  stub-driver.c
usr/stub-fs-probe/: CMakeLists.txt  stub-fs-probe.c
usr/stub-walk-probe/: CMakeLists.txt  stub-walk-probe.c
usr/tapestry-battery/: Cargo.toml
usr/tapestry-demo/: Cargo.toml
usr/tapestryd/: Cargo.toml
usr/thread-fault-probe/: CMakeLists.txt  thread-fault-probe.c
usr/thread-probe/: CMakeLists.txt  thread-probe.c
usr/tls-smoke/: Cargo.toml
usr/tlsperf/: Cargo.toml
usr/u-6-test/: Cargo.toml
usr/u-7-test/: Cargo.toml
usr/u-builtin-test/: Cargo.toml
usr/u-glob-test/: Cargo.toml
usr/u-job-test/: Cargo.toml
usr/u-readdir-test/: Cargo.toml
usr/u-redir-test/: Cargo.toml
usr/u-repl-test/: Cargo.toml
usr/u-subst-test/: Cargo.toml
usr/u-test/: Cargo.toml
usr/virtio-blk-probe/: Cargo.toml
usr/virtio-blk-rw/: Cargo.toml
usr/virtio-gpu/: Cargo.toml
usr/virtio-input/: Cargo.toml
usr/virtio-mmio-source/: Cargo.toml
usr/virtio-net-arp/: Cargo.toml
usr/virtio-net-loop/: Cargo.toml
usr/virtio-net-probe/: Cargo.toml
usr/warden/: Cargo.toml
usr/weft-bench/: Cargo.toml
(+988 files in other folders)
