# Thylacine native userspace — Rust side.
#
# Workspace root for all Rust userspace crates. Sibling of the C side
# (usr/lib/libt + usr/hello).
#
# Members:
#   - lib/libthyla-rs  (P4-Ic4) — runtime crate. SVC wrappers + _start +
#                                 panic_handler + syscall/right/prot
#                                 constants. Mirror of C-side libt.
#   - hello-rs          (P4-Ia2) — first Rust binary; depends on libthyla-rs.
#   (P4-Ic5+ will add the virtio-blk driver crate.)
#
# Build via tools/build.sh userspace (preferred) or directly from this
# directory:
#   cargo build --release
#
# Default target (aarch64-unknown-none) + linker flags are pinned in
# usr/.cargo/config.toml. Output lands at build/usr-rs/aarch64-unknown-none/release/.

[workspace]
resolver = "2"
members = ["lib/libthyla-rs", "hello-rs"]

[workspace.package]
edition = "2021"
publish = false
license = "0BSD"

[profile.release]
opt-level = "z"        # size-optimize; no FP / no SIMD in hello path
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = false          # keep symbols for kernel-side addr2line; .debug_* discarded by ld script
overflow-checks = true # cheap; surface integer bugs in any future crate
