# Thylacine native userspace — Rust side.
#
# Workspace root for all Rust userspace crates. Sibling of the C side
# (usr/lib/libt + usr/hello).
#
# Members:
#   - lib/libthyla-rs  (P4-Ic4) — runtime crate. SVC wrappers + _start +
#                                 panic_handler + syscall/right/prot
#                                 constants. Mirror of C-side libt.
#   - hello-rs          (P4-Ia2) — first Rust binary; depends on libthyla-rs.
#   - mmio-probe        (P4-Ic5a) — first hw-handle userspace binary.
#                                   Closes deferred R10 F159 (SVC-path
#                                   test coverage for SYS_MMIO_CREATE +
#                                   SYS_MMIO_MAP). Spawned by kproc via
#                                   rfork_with_caps(CAP_HW_CREATE).
#   - irq-probe         (P4-Ic5-IRQ-probe) — closes the IRQ side of
#                                   R10 F159 (SVC-path test coverage
#                                   for SYS_IRQ_CREATE + SYS_IRQ_WAIT).
#                                   Companion to mmio-probe.
#   - virtio-blk-probe  (P4-Ic5b2) — first composed userspace driver.
#                                   Drives QEMU virt's virtio-blk-device
#                                   via the MMIO transport: claims slot
#                                   + DMA buf + IRQ; runs VirtIO 1.2 init;
#                                   issues VIRTIO_BLK_T_IN(sector=0);
#                                   verifies block 0 signature against
#                                   the on-disk pattern produced by
#                                   tools/build.sh disk.
#   - virtio-blk-rw     (P4-Ic7)  — multi-sector successor. 1 MiB data
#                                   DMA + reused 3-descriptor chain;
#                                   reads VirtIO Capacity from config
#                                   space; three-pass exit-criterion
#                                   test: read(A) + write(B) +
#                                   readback(B) per 1 MiB batch over
#                                   min(disk, 1 GiB). THYLACINE_DISK_SIZE=1G
#                                   enables the full 1 GiB ROADMAP §6.2
#                                   run.
#
# Build via tools/build.sh userspace (preferred) or directly from this
# directory:
#   cargo build --release
#
# Default target (aarch64-unknown-none) + linker flags are pinned in
# usr/.cargo/config.toml. Output lands at build/usr-rs/aarch64-unknown-none/release/.

[workspace]
resolver = "2"
members = ["lib/libthyla-rs", "hello-rs", "mmio-probe", "irq-probe", "virtio-blk-probe", "virtio-blk-rw"]

[workspace.package]
edition = "2021"
publish = false
license = "0BSD"

[profile.release]
opt-level = "z"        # size-optimize; no FP / no SIMD in hello path
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = false          # keep symbols for kernel-side addr2line; .debug_* discarded by ld script
overflow-checks = true # cheap; surface integer bugs in any future crate
