[package]
name = "aurora"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "aurora"
path = "src/main.rs"

[dependencies]
libthyla-rs = { path = "../lib/libthyla-rs" }
libtapestry = { path = "../lib/libtapestry" }
cornucopia = { path = "../lib/cornucopia" }
